2004-09-06  Matti Aarnio  <mea@zmailer.org>

	* scheduler/mq2.c, scheduler/mailq.inc:
	    Added (into the scheduler's "MAILQ -QQQQ" processing)
	    a way to call external arbitrary command, whose output
	    is collected into the command output.  This allows
	    "easy" addition of custom system monitoring data
	    into the output.  Something will get added into "contrib".

2004-09-05  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c:
	    Realized that under some conditions it is possible to
	    spin in place of the automagic "this rcpt domain is
	    my local".

2004-09-03  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemons.c, smtpserver/smtpserver.h,
	  smtpserver/subdaemon-ctf.c, smtpserver/subdaemon-rtr.c:
	    Always watch for subdaemon client connection readability,
	    and do read it.  If it yields EOF, kill the peer..

	* router/router.c, router/router.h, router/rfc822.c:
	    Slight alteration in router's unremovable console
	    logging..  now it can be removed with '-l' option.

	* smtpserver/subdaemon-rtr.c, smtpserver/subdaemon-ctf.c:
	    SIGTERM reaction corrections in "clients" when talking
	    (or trying to) with the subdaemon.

	* smtpserver/smtpserver.c:
	    Make the SMTP speaker loop to obey SIGTERM, and to
	    drop everything it was doing... (gracefull death of
	    server instance.)

	* smtpserver/smtpserver.c, smtpserver/smtpserver.h,
	  smtpserver/smtpchild.c:
	    Do classfull connection accounting statistics.

	* smtpserver/smtpserver.c:
	    setsockopt(s, IPPROTO_IPV6, IPV6_V6ONLY, (void*)&on, sizeof(on))
	    (if available, binds the IPv6 socket only to v6 version
	     of the protocol port, not v4+v6 combined space!)

	* smtpserver/subdaemons.c:
	    Process customer inputs in fair round-robin manner.
	    Otherwise customers who have gotten lowest socket
	    numbers might just dominate the server, and those
	    that have higher numbers would starve.

2004-08-22  Matti Aarnio  <mea@zmailer.org>
